--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+<!-- Icono principal -->
+<link rel="icon" type="image/png" sizes="192x192" href="/iconport2.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Portafolio Yassir Paez</title>
   </head>
   <body>
     <div id="root"></div>
